# t2c-data-ingest

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_connections.py  0003_job_detail_fields.py  0004_job_code_versions.py  0005_job_schedules.py  0006_ingestion_control.py  0007_variables.py  0008_pipeline_builder.py  0009_tags.py  0010_job_code_versions_workspace.py  0011_job_soft_delete.py  0012_cluster_libraries.py  0013_runtime_environment.py  0014_job_list_indexes.py  0015_cluster_runtime_fields.py  0016_backfill_runs.py  0017_alerts.py  0018_data_quality.py  0019_user_access.py  0020_indexes_retention.py  0021_execution_reliability.py  0022_worker_heartbeat.py  0023_integration_outbox.py  0024_runtime_versions.py  0025_s3_connections.py  0026_ingestion_control_s3_destino.py  0027_data_lake_catalog.py  0028_connection_categories_secrets.py  0029_destinations.py  0030_destination_template.py  0031_control_declarative.py  0032_execution_observability.py  0033_integration_events.py  0034_ingestion_control_destinations.py  0035_security_fields.py  0036_ic_destination_overrides.py
backend/scripts/: migrate_destinations_to_generic.py  run_scheduler.py  run_worker.py  seed_local_cluster.py  seed_massa_teste_control.py  seed_massa_teste_pipeline.py  seed_payments_job.py  seed_postgres_to_mysql.py  seed_tags.py
backend/tests/: test_integration_events.py  test_logic.py  test_security.py  test_workspace.py
(+311 files in other folders)
