[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t2c-data-ingest-backend"
version = "0.1.0"
description = "T2C Data Ingest backend — operational layer for ingestion jobs, pipelines and executions"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.3.4",
  "PyJWT>=2.8.0",
  "passlib[bcrypt]>=1.7.4",
  "argon2-cffi>=23.1.0",
  "cryptography>=42",
  "pymysql>=1.1.1",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["t2c_ingest*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
